# pantheon-files-plugin-text-tags

./: README.md  meson.build  package-lock.json  package.json
data/: Application.css  com.paysonwallach.ttags-plugin.gresource.xml  com.paysonwallach.ttags-plugin.plug  meson.build
meta/: README.md.njk
src/: Plugin.vala  meson.build
src/Controllers/: TTagsDialogController.vala  TagListViewController.vala
src/Models/: Tag.vala
src/Utils/: OrderedSet.vala
src/Views/: TTagsDialog.vala  TagListView.vala  TagView.vala
