shared_module (
  meson.project_name(),
  'Controllers/TTagsDialogController.vala',
  'Controllers/TagListViewController.vala',
  'Models/Tag.vala',
  'Views/TTagsDialog.vala',
  'Views/TagListView.vala',
  'Views/TagView.vala',
  'Plugin.vala',
  as_resources,
  dependencies: [
    gee_dep,
    glib_dep,
    gobject_dep,
    granite_dep,
    gtk_dep,
    json_dep,
    pango_dep,
    pantheon_files_core_dep,
    posix_dep
  ],
  install: true,
  install_dir: files_plugin_dir
)
